minitrace-macro/tests/ui/err/has-expr-argument.stderr
error: invalid argument
 --> tests/ui/err/has-expr-argument.rs:3:1
  |
3 | #[trace(true)]
  | ^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `trace` (in Nightly builds, run with -Z macro-backtrace for more info)
