minitrace-macro/tests/ui/err/has-expr-argument.rs
use minitrace::trace;

#[trace(true)]
fn f() {}

fn main() {}
